--- a/Prevu.Synoptics.V3001-COVERIS/G230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/G230.xaml
@@ -177,7 +177,7 @@
             VerticalAlignment="Top" 
             ComponentName="234-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="499,486,0,0" 
+            Margin="511,486,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="394,156,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="152" PipeHeight="Medium" StatusComponent="212-71-ECS1" Height="22">
@@ -216,7 +216,7 @@
         </Labels:Pipe>
         <Machines:GR_001 HorizontalAlignment="Left" Margin="335,419,0,0" VerticalAlignment="Top" Height="161" Width="209"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="408,604,0,0" 
+            Margin="397,604,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-03-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="504,291,0,0" VerticalAlignment="Top" Color="Water" Width="119" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-22-CV1">
@@ -237,7 +237,7 @@
             Margin="233,486,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="906,523,0,0" VerticalAlignment="Top" Width="116" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="850,579,0,0" VerticalAlignment="Top" Width="228" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -247,12 +247,12 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="959,573,0,0" VerticalAlignment="Top" Width="66" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="959,685,0,0" VerticalAlignment="Top" Width="66" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="848,486,0,0" 
             VerticalAlignment="Top" 
             ComponentName="322-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1052,584,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="22">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1052,696,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="22">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -262,9 +262,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1004,542,0,0" VerticalAlignment="Top" Height="70" Width="64"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1004,655,0,0" VerticalAlignment="Top" Height="70" Width="64"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="991,604,0,0" 
+            Margin="991,718,0,0" 
             VerticalAlignment="Top" 
             ComponentName="324-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -297,15 +297,15 @@
             Margin="1036,327,0,0" 
             VerticalAlignment="Top" 
             ComponentName="320-01-MA1"/>
-        <Rectangle HorizontalAlignment="Left" Height="31" Margin="262,262,0,0" Stroke="Black" VerticalAlignment="Top" Width="32" Fill="Gray"/>
+        <Rectangle HorizontalAlignment="Left" Height="31" Margin="259,261,0,0" VerticalAlignment="Top" Width="32" Fill="Gray"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="525,113,0,0" 
+            Margin="511,113,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-71-ECS1"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="169,293,0,0" VerticalAlignment="Top" Width="152" />
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="976,398,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1124,560,0,0" 
+            Margin="1124,672,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="324-01-MA1" 
             JumpToLabel="326-21-CV1"/>
@@ -385,7 +385,7 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="588,201,0,0" 
+            Margin="588,200,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-21-CV1"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="586,218,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
@@ -419,7 +419,7 @@
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="233,208,0,0" 
+            Margin="230,200,0,0" 
             VerticalAlignment="Top" 
             ComponentName="208-02-EC1"/>
         <Rectangle HorizontalAlignment="Left" Height="112" Margin="207,117,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
@@ -446,10 +446,6 @@
             Margin="1166,406,0,0" 
             VerticalAlignment="Top" 
             ComponentName="320-42-TT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="108,708,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="227-01-EC1"/>
         <Machines:ARF_Roll_Filter HorizontalAlignment="Left" Margin="447,207,0,0" VerticalAlignment="Top" Height="108" Width="104"/>
         <Machines:EXC_Air HorizontalAlignment="Left" Margin="1181,365,0,0" VerticalAlignment="Top" Height="27" Width="60"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="1056,374,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="50" Color="Oil">
