--- a/Prevu.Synoptics.V3001-COVERIS/G230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/G230.xaml
@@ -271,7 +271,6 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle HorizontalAlignment="Left" Height="31" Margin="259,261,0,0" VerticalAlignment="Top" Width="32" Fill="Gray"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="169,293,0,0" VerticalAlignment="Top" Width="152" />
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="976,398,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
         <Rectangle HorizontalAlignment="Left" Height="112" Margin="470,117,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
@@ -447,7 +446,7 @@
             VerticalAlignment="Top" 
             ComponentName="212-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="230,200,0,0" 
+            Margin="221,200,0,0" 
             VerticalAlignment="Top" 
             ComponentName="208-02-EC1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -459,5 +458,6 @@
             VerticalAlignment="Top" 
             JumpFromLabel="324-01-MA1" 
             JumpToLabel="326-21-CV1"/>
+        <Machines:EC_Metal_Detector HorizontalAlignment="Left" Margin="245,255,0,0" VerticalAlignment="Top" Height="38" Width="44"/>
     </Grid>
 </UserControl>
