--- a/Prevu.Synoptics.V3001-COVERIS/G810.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/G810.xaml
@@ -117,7 +117,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Rectangle HorizontalAlignment="Left" Height="221" Margin="70,145,0,0" Stroke="Black" VerticalAlignment="Top" Width="416" RadiusX="15" RadiusY="15"/>
+		<Rectangle HorizontalAlignment="Left" Height="199" Margin="64,159,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="426" RadiusX="15" RadiusY="15" d:IsLocked="True"/>
 		<Rectangle HorizontalAlignment="Left" Height="35" Margin="428,222,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
 		<Rectangle HorizontalAlignment="Left" Height="142" Margin="1147,571,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
 			<Rectangle.RenderTransform>
@@ -204,7 +204,7 @@
             VerticalAlignment="Top" 
             ComponentName="812-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="386,172,0,0" 
+            Margin="386,173,0,0" 
             VerticalAlignment="Top" 
             ComponentName="530-41-TT1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
