--- a/Prevu.Synoptics.V3001-COVERIS/G380.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/G380.xaml
@@ -248,7 +248,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="710,263,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="380-Cleaning"/>
+            ComponentName="380-DCE"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="1150,497,0,0" 
             VerticalAlignment="Top" 
