--- a/Prevu.Synoptics.V3001-COVERIS/G520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/G520.xaml
@@ -291,7 +291,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="770,263,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="520-Cleaning"/>
+            ComponentName="520-DCE"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="909,421,0,0" 
             VerticalAlignment="Top" 
