Change synoptic name

--- a/Prevu.Synoptics.V3001-COVERIS/P230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P230.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.G230" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="-4,-5,4,5">
         <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="750" Margin="69,0,0,0" VerticalAlignment="Center" Width="641" Visibility="Visible" d:IsLocked="True"/>
