--- a/Prevu.Synoptics.V3001-COVERIS/P330.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P330.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.G330" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="-1,0,1,0">
         <Labels:Pipe HorizontalAlignment="Left" Margin="203,564,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="332-21-CV1"/>
