--- a/Prevu.Synoptics.V3001-COVERIS/P380.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P380.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.G380" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P380" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="0,2,0,-2">
         <Labels:Pipe HorizontalAlignment="Left" Margin="831,713,0,0" VerticalAlignment="Top" Width="82" Color="Water" StatusComponent="386-01-MA1"/>
