--- a/Prevu.Synoptics.V3001-COVERIS/P490.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P490.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.G490" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P490" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
         <Labels:Pipe HorizontalAlignment="Left" Margin="381,523,0,0" VerticalAlignment="Top" Width="284" Color="Water" StatusComponent="526-01-MA1" RenderTransformOrigin="0.5,0.5">
