--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -10,7 +10,7 @@
   
   <ScrollViewer>
     <StackPanel>
-            <Synoptics:G230/>
+            <Synoptics:P230/>
         </StackPanel>    
   </ScrollViewer>
 
