--- a/Prevu.Synoptics.V3001-COVERIS/P514.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P514.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.G514" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P514" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="1055,460,0,0" VerticalAlignment="Top" Color="Oil" Width="46" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-23-CV1">
