--- a/Prevu.Synoptics.V3001-COVERIS/P520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P520.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.G520" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P520" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="0,2,0,-2">
         <Labels:Pipe HorizontalAlignment="Left" Margin="167,304,0,0" VerticalAlignment="Top" Width="100" Color="Water" StatusComponent="528-21-CV1" RenderTransformOrigin="0.5,0.5">
