--- a/Prevu.Synoptics.V3001-COVERIS/P810.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P810.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.G810" mc:Ignorable="d"
+             x:Class="Prevu.Synoptics.P810" mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid RenderTransformOrigin="0.5,0.5">
 		<Grid.RenderTransform>
