--- a/Prevu.Drawings/Machines/WaterPump.xaml
+++ b/Prevu.Drawings/Machines/WaterPump.xaml
@@ -9,7 +9,7 @@
   <Viewbox Stretch="Uniform">
     <Canvas Name="svg8" Width="100" Height="100">
       <Ellipse Canvas.Left="3" Canvas.Top="3" Width="94" Height="94" Name="circle2" Fill="Gray" Effect="{DynamicResource MaterialDesignShadowDepth2}"/>
-      <Path Name="ColorSide" d:Fill="#FF607D8B">
+      <Path Name="ColorSide">
         <Path.Data>
           <PathGeometry Figures="M27.9009 91.491C13.0836 83.5825 3 67.9688 3 50C3 32.0312 13.0836 16.4175 27.9009 8.50899V91.491Z" FillRule="NonZero"/>
         </Path.Data>
