--- a/Prevu.Drawings/Machines/VRC_WaterCollectingTank.xaml
+++ b/Prevu.Drawings/Machines/VRC_WaterCollectingTank.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" Width="100" Height="44" Effect="{DynamicResource MaterialDesignShadowDepth1}">
-	<Viewbox Stretch="Uniform">
+	<Viewbox Stretch="Fill">
 		<Canvas Name="svg11" Width="100" Height="44">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0"/>
