Update Pages with new DetailsLabels

--- a/Prevu.Synoptics.V3001-COVERIS/P514.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P514.xaml
@@ -99,7 +99,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="803,274,0,0" Stroke="Black" VerticalAlignment="Top" Width="152" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="803,274,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -160,11 +160,7 @@
             Margin="921,745,0,0" 
             VerticalAlignment="Top" 
             ComponentName="518-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="934,250,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="Hyd-Unit"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="648,138,0,0" 
             VerticalAlignment="Top" 
             ComponentName="514-04-MA1"/>
@@ -190,5 +186,6 @@
             VerticalAlignment="Top" 
             JumpFromLabel="514-04-MA1" 
             JumpToLabel="496-01-MA1"/>
-    </Grid>
+		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="865,250,0,0" VerticalAlignment="Top" ComponentName="514-HYD" DetailsPageName="D514" />
+	</Grid>
 </UserControl>
