--- a/Prevu.Synoptics.V3001-COVERIS/P810.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P810.xaml
@@ -256,5 +256,6 @@
             VerticalAlignment="Top" 
             JumpFromLabel="530-21-CV1" 
             JumpToLabel="524-01-MA1"/>
+		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="921,196,0,0" VerticalAlignment="Top" ComponentName="810-VIEW" DetailsPageName="D810" HideComponentName="True"/>
 	</Grid>
 </UserControl>
